--- a/Project/Client/Views/Shared/_Layout.cshtml
+++ b/Project/Client/Views/Shared/_Layout.cshtml
@@ -41,8 +41,9 @@
                                 </a>
                             </div>
                             <div class="mx-3">
-                                <form>
-                                    <input class="form-control me-2" type="search" placeholder="Search.." aria-label="Search">
+                                <form asp-action="SearchProduct" asp-controller="Home" method="post">
+                                    
+                                    <input class="form-control me-2" type="text" placeholder="Search.." aria-label="Search" name="searchString">
                                 </form>
                             </div>
                         </div>
