view blog, contactus

--- a/Project/Client/Views/G4T/ContactUs.cshtml
+++ b/Project/Client/Views/G4T/ContactUs.cshtml
@@ -3,21 +3,115 @@
 
     <h1 class="mt-5" style="font-size:80px;">Contact Us</h1>   
     <div class="row ">
-        <div class="col-md-6 border">
+        <div class="col-md-6 mt-3 p-3">
             <h1>We would love to hear from you</h1>
             <p>Need help? Have a question? Completely Lost?</p>
             <p>There are a variety of way to contact the game administration on each of our games. 
                 You can use the form here, email us directly, request help on game forums, and even use in game commands.
             </p>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 mt-3 p-3">
             <div class="d-flex mb-3">
                 <input class="form-control me-2" placeholder="Your Name" style="border-radius: 5px;" />
                 <input class="form-control" placeholder="Your Email" style="border-radius: 5px;" />
             </div>
             <input class="form-control mb-3" placeholder="Subject" style="border-radius: 5px;" />
-            <textarea class="form-control mb-3" placeholder="Message" style="border-radius: 5px;"></textarea>
+            <textarea class="form-control mb-3" placeholder="Message" style="border-radius: 5px; height: 150px;"></textarea>
             <button class="btn btn-primary w-100" style="border-radius: 5px;">Send Message</button>
+        </div>
+
+    </div>
+    <div class="row" style="margin-top:5vw;">
+        <div class="col-md-4 mt-3">
+            <div class="d-flex flex-column align-items-center text-center" style="border-bottom: 2px solid black; padding-bottom: 1rem; max-width: 90%; margin: auto;">
+                <div style="background-color: #000; border-radius: 50%; padding: 2rem; display: inline-flex; align-items: center; justify-content: center; width: 120px; height: 120px;">
+                    <i class="fa-brands fa-fort-awesome" style="font-size: 3.5rem; color: #fff;"></i>
+                </div>
+                <h2 style="font-size: 1.4rem; font-weight: bold; color: #444; margin-top: 0.5rem;">Ask Other Players</h2>
+                <h1 style="font-size: 1.8rem; font-weight: bold; color: #222;">GAME FORUMS</h1>
+            </div>
+            <div style="padding-top: 0.8rem; max-width: 90%; margin: auto;">
+                <p style="font-size: 0.95rem; color: #555; line-height: 1.5;">Our players love to help people.</p>
+                <p style="font-size: 0.95rem; color: #555; line-height: 1.5;">
+                    If you have already created a game, simply click on one of our game forums, log in with your character information, and ask a question.
+                </p>
+                <p style="font-size: 0.95rem; color: #555; line-height: 1.5;">
+                    Usually, you will get a response quite quickly.
+                </p>
+                <ul style="padding-left: 2rem; list-style-type: disc;">
+                    <li><a href="#" style="color: #0066cc; text-decoration: none;">Achaea Forums</a></li>
+                    <li><a href="#" style="color: #0066cc; text-decoration: none;">Aetolia Forums</a></li>
+                    <li><a href="#" style="color: #0066cc; text-decoration: none;">Imperian Forums</a></li>
+                    <li><a href="#" style="color: #0066cc; text-decoration: none;">Lusternia Forums</a></li>
+                </ul>
+                <p style="font-size: 0.95rem; color: #555; line-height: 1.5;">
+                    You can also search on the forums. If you have a question about something, it may have been asked before.
+                </p>
+                <p style="font-size: 0.95rem; color: #555; line-height: 1.5;">
+                    In either case, don't hesitate to ask for help.
+                </p>
+            </div>
+        </div>
+
+
+        <div class="col-md-4 mt-3">
+            <div class="d-flex flex-column align-items-center text-center" style="border-bottom: 2px solid black; padding-bottom: 1rem; max-width: 90%; margin: auto;">
+                <!-- Icon lớn hơn với border bao quanh -->
+                <div style="background-color: #000; border-radius: 50%; padding: 2rem; display: inline-flex; align-items: center; justify-content: center; width: 120px; height: 120px;">
+                    <i class="fa-solid fa-envelope" style="font-size: 3.5rem; color: #fff;"></i>
+                </div>
+                <h2 style="font-size: 1.4rem; font-weight: bold; color: #444; margin-top: 0.5rem;">
+                    Contact Support
+                </h2>
+                <h1 style="font-size: 1.8rem; font-weight: bold; color: #222;">
+                    Email Us Directly
+                </h1>
+            </div>
+            <div style="padding-top: 0.8rem; max-width: 90%; margin: auto;">
+                <p style="font-size: 0.95rem; color: #555; line-height: 1.5;">
+                    You can also contact our support staff directly. Use your email client to send mail to our address. 
+                    You can also use the form above.
+                </p>
+                <ul style="padding-left: 2rem; list-style-type: disc;">
+                    <li><a href="#" style="color: #0066cc; text-decoration: none;">Achaea: support@achaea.com</a></li>
+                    <li><a href="#" style="color: #0066cc; text-decoration: none;">Aetolia: support@aetolia.com</a></li>
+                    <li><a href="#" style="color: #0066cc; text-decoration: none;">Hoàng gia: support@imperian.com</a></li>
+                    <li><a href="#" style="color: #0066cc; text-decoration: none;">Lusternia: support@lusternia.com</a></li>
+                </ul>
+                <p style="font-size: 0.95rem; color: #555; line-height: 1.5;">
+                    When you email us, we will usually respond within 24 hours.
+                </p>
+            </div>
+        </div>
+
+        <div class="col-md-4 mt-3">
+            <div class="d-flex flex-column align-items-center text-center" style="border-bottom: 2px solid black; padding-bottom: 1rem; max-width: 90%; margin: auto;">
+                <!-- Đảm bảo padding đủ và border-radius 50% -->
+                <div style="background-color: #000; border-radius: 50%; padding: 2rem; display: inline-flex; align-items: center; justify-content: center; width: 120px; height: 120px;">
+                    <i class="fa-solid fa-question" style="font-size: 3.5rem; color: #fff;"></i>
+                </div>
+                <h2 style="font-size: 1.4rem; font-weight: bold; color: #444; margin-top: 0.5rem;">In Game Commands</h2>
+                <h1 style="font-size: 1.8rem; font-weight: bold; color: #222;">Other Options</h1>
+            </div>
+            <div style="padding-top: 0.8rem; max-width: 90%; margin: auto;">
+                <p style="font-size: 0.95rem; color: #555; line-height: 1.5;">You can also use two handy in game command to ask questions. </p>
+                <p style="font-size: 0.95rem; color: #555; line-height: 1.5;">
+                    First, you can use the NEWBIE channel to ask a question you may have.
+                    For example, you could type in the command - newbie How do I kill goblins in this game?
+                </p>
+                <p style="font-size: 0.95rem; color: #555; line-height: 1.5;">
+                    One of our players or admin in the game should be able to help you with this almost instantly.
+                </p>
+                <p style="font-size: 0.95rem; color: #555; line-height: 1.5;">
+                    Another option is to use the ISSUE command.
+                    This will submit a report to the administration and they will help you as soon as possible.
+                    Generally this is used more for emergencies if you cannot get help via other means.
+                    For example: ISSUE ME I am stuck and unable to move at all.
+                </p>
+                <p style="font-size: 0.95rem; color: #555; line-height: 1.5;">
+                    Type in HELP ISSUES for more information.
+                </p>
+            </div>
         </div>
 
     </div>
