--- a/Project/Client/Views/Shared/_Layout.cshtml
+++ b/Project/Client/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
     <div class="">
         <header>
             <!-- Navbar -->
-            <nav class="navbaradmin navbar navbar-expand-lg navbar-light bg-white">
+            <nav class="navbaradmin navbar navbar-expand-lg navbar-light bg-white sticky-top">
                 <div class="container-fluid d-flex">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
