--- a/Project/Client/Views/Product/Product.cshtml
+++ b/Project/Client/Views/Product/Product.cshtml
@@ -122,13 +122,13 @@
             <div class="d-flex align-items-center justify-content-end" style="margin-right: 1vw; flex-wrap: wrap;">
                 <form method="get" asp-controller="Product" asp-action="Product" class="col-md-1 col-4 d-inline ms-2 mb-2">
                     <div class="dropdown">
-                        <a href="#" type="button" class="d-flex align-items-center justify-content-around dropdown-toggle text-white" style="height: 2em; background-color: black; border-radius: 5px" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a href="#" type="button" class="d-flex align-items-center justify-content-around dropdown-toggle text-white" style="height: 2em; background-color: #00A97F; border-radius: 5px" data-bs-toggle="dropdown" aria-expanded="false">
                             <i class="fa-regular fa-rectangle-list"></i>
                         </a>
                         <ul class="dropdown-menu p-0" style="min-width: auto; width: auto;">
-                            <li><button class="dropdown-item" style="background-color: white; color:black" type="button" onclick="document.querySelector('[name=\'pageSize\']').value='3'; this.form.submit()">3 bản ghi mỗi trang</button></li>
-                            <li><button class="dropdown-item" style="background-color: white; color:black" type="button" onclick="document.querySelector('[name=\'pageSize\']').value='5'; this.form.submit()">5 bản ghi mỗi trang</button></li>
-                            <li><button class="dropdown-item" style="background-color: white; color:black" type="button" onclick="document.querySelector('[name=\'pageSize\']').value='10'; this.form.submit()">10 bản ghi mỗi trang</button></li>
+                            <li><button class="dropdown-item" style="background-color: white; color:#00A97F" type="button" onclick="document.querySelector('[name=\'pageSize\']').value='3'; this.form.submit()">3 bản ghi mỗi trang</button></li>
+                            <li><button class="dropdown-item" style="background-color: white; color:#00A97F" type="button" onclick="document.querySelector('[name=\'pageSize\']').value='5'; this.form.submit()">5 bản ghi mỗi trang</button></li>
+                            <li><button class="dropdown-item" style="background-color: white; color:#00A97F" type="button" onclick="document.querySelector('[name=\'pageSize\']').value='10'; this.form.submit()">10 bản ghi mỗi trang</button></li>
                         </ul>
                         <input type="hidden" name="pageSize" value="" />
                         <input type="hidden" name="page" value="1" />
@@ -136,26 +136,21 @@
                 </form>
 
                 <!-- Sort -->
-                <form class="col-md-1 col-4 d-inline ms-2 mb-2">
-                    <div class="dropdown">
-                        <!-- Button Sort -->
-                        <a href="#" type="button" class="d-flex align-items-center justify-content-around dropdown-toggle text-white" style="height: 2em; background-color: black; border-radius: 5px" data-bs-toggle="dropdown" aria-expanded="false">
-                            <i class="fa-solid fa-arrow-up-z-a"></i>
-                        </a>
-
-                        <!-- Menu Sort -->
-                        <ul class="dropdown-menu p-0" style="min-width: auto; width: auto; border-radius: 5px; overflow: hidden;">
-                            <li><button class="dropdown-item" style="background-color: white; color:black" type="button">Giá tăng dần</button></li>
-                            <li><button class="dropdown-item" style="background-color: white; color:black" type="button">Giá giảm dần</button></li>
-                            <li><button class="dropdown-item" style="background-color: white; color:black" type="button">View tăng dần</button></li>
-                            <li><button class="dropdown-item" style="background-color: white; color:black" type="button">View giảm dần</button></li>
-                            <li><button class="dropdown-item" style="background-color: white; color:black" type="button">Like tăng dần</button></li>
-                            <li><button class="dropdown-item" style="background-color: white; color:black" type="button">Like giảm dần</button></li>
-                            <li><button class="dropdown-item" style="background-color: white; color:black" type="button">Lượt mua tăng dần</button></li>
-                            <li><button class="dropdown-item" style="background-color: white; color:black" type="button">Lượt mua giảm dần</button></li>
-                        </ul>
-                    </div>
+                <form class="col-md-5 d-inline-flex align-items-center ms-2 mb-2" asp-action="SortProducts" asp-controller="Product" method="post" style="gap: 10px;">
+                    <select name="sort" class="form-select me-2 w-75" aria-label="Type" style="height: 2em; background-color: #00A97F; color: white; border: 1px solid #ccc;">
+                        <option value="ascPrice" style="background-color: white; color: #00A97F;">Giá tăng dần</option>
+                        <option value="descPrice" style="background-color: white; color: #00A97F;">Giá giảm dần</option>
+                        <option value="ascView" style="background-color: white; color: #00A97F;">View tăng dần</option>
+                        <option value="descView" style="background-color: white; color: #00A97F;">View giảm dần</option>
+                        <option value="ascLike" style="background-color: white; color: #00A97F;">Like tăng dần</option>
+                        <option value="descLike" style="background-color: white; color: #00A97F;">Like giảm dần</option>
+                        <option value="ascSold" style="background-color: white; color: #00A97F;">Lượt mua tăng dần</option>
+                        <option value="descSold" style="background-color: white; color: #00A97F;">Lượt mua giảm dần</option>
+                    </select>
+                    <button type="submit" class="btn btn-primary" style="height: 2em; width: 100px; background-color: #00A97F; color: white; border: 1px solid #ccc;">Sort</button>
                 </form>
+
+
 
                 <!-- Free or Paid Toggle -->
                 <label class="switch ms-2 mb-2">
